// Enums

Enum UsageEventType {
  EVENT_CREATED
  SOLD
  RESOLD
  SCANNED
  INVALIDATED
  CHECKED_IN
  CLAIMED
}

Enum TopUpEventType {
  NON_CUSTODIAL
  CUSTODIAL
}

Enum SpentFuelSource {
  PROTOCOL
  REMAINDER
}

// Entities

Table Protocol {
  id id
  averageReservedPerTicket bigdecimal
  reservedFuel bigdecimal
  reservedFuelProtocol bigdecimal
  currentReservedFuel bigdecimal
  currentReservedFuelProtocol bigdecimal
  spentFuel bigdecimal
  spentFuelProtocol bigdecimal
  currentSpentFuel bigdecimal
  currentSpentFuelProtocol bigdecimal
  collectedSpentFuel bigdecimal
  collectedSpentFuelProtocol bigdecimal
  totalSalesVolume bigdecimal
  topUpCount bigint
  eventCount bigint
  soldCount bigint
  invalidatedCount bigint
  resoldCount bigint
  scannedCount bigint
  checkedInCount bigint
  claimedCount bigint
  minFeePrimary bigdecimal
}

Table ProtocolDay {
  id id
  day int
  averageReservedPerTicket bigdecimal
  reservedFuel bigdecimal
  reservedFuelProtocol bigdecimal
  spentFuel bigdecimal
  spentFuelProtocol bigdecimal
  currentSpentFuel bigdecimal
  currentSpentFuelProtocol bigdecimal
  collectedSpentFuel bigdecimal
  collectedSpentFuelProtocol bigdecimal
  totalSalesVolume bigdecimal
  topUpCount bigint
  eventCount bigint
  soldCount bigint
  invalidatedCount bigint
  resoldCount bigint
  scannedCount bigint
  checkedInCount bigint
  claimedCount bigint
}


Table Integrator {
  id id
  averageReservedPerTicket bigdecimal
  availableFuel bigdecimal
  reservedFuel bigdecimal
  reservedFuelProtocol bigdecimal
  currentReservedFuel bigdecimal
  currentReservedFuelProtocol bigdecimal
  spentFuel bigdecimal
  spentFuelProtocol bigdecimal
  price bigdecimal
  activeTicketCount bigint
  isBillingEnabled boolean
  isConfigured boolean
  minFeePrimary bigdecimal
  maxFeePrimary bigdecimal
  primaryRate bigdecimal
  minFeeSecondary bigdecimal
  maxFeeSecondary bigdecimal
  secondaryRate bigdecimal
  salesTaxRate bigdecimal
  name string
  eventCount bigint
  topUpCount bigint
  soldCount bigint
  invalidatedCount bigint
  resoldCount bigint
  scannedCount bigint
  checkedInCount bigint
  claimedCount bigint
  relayers Relayer[] [ref: > Relayer.integrator]
  events Event[] [ref: > Event.integrator]
  tickets Ticket[] [ref: > Ticket.integrator]
  integratorDays IntegratorDay[] [ref: > IntegratorDay.integrator]
  usageEvents UsageEvent[] [ref: > UsageEvent.integrator]
  topUpEvents TopUpEvent[] [ref: > TopUpEvent.integrator]
}

Table IntegratorDay {
  id id
  integrator Integrator
  day int
  averageReservedPerTicket bigdecimal
  availableFuel bigdecimal
  reservedFuel bigdecimal
  reservedFuelProtocol bigdecimal
  spentFuel bigdecimal
  spentFuelProtocol bigdecimal
  price bigdecimal
  eventCount bigint
  topUpCount bigint
  soldCount bigint
  invalidatedCount bigint
  resoldCount bigint
  scannedCount bigint
  checkedInCount bigint
  claimedCount bigint
}

Table Relayer {
  id id
  integrator Integrator
  isEnabled boolean
}

Table Event {
  id id
  eventIndex bigint
  createTx bytes
  blockNumber bigint
  blockTimestamp bigint
  integrator Integrator
  relayer Relayer
  usageEvents UsageEvent[] [ref: > UsageEvent.event]
  tickets Ticket[] [ref: > Ticket.event]
  accountDeductionUsd bigdecimal
  reservedFuel bigdecimal
  reservedFuelProtocol bigdecimal
  averageReservedPerTicket bigdecimal
  soldCount bigint
  resoldCount bigint
  scannedCount bigint
  checkedInCount bigint
  invalidatedCount bigint
  claimedCount bigint
  name string
  shopUrl string
  imageUrl string
  latitude bigdecimal
  longitude bigdecimal
  currency string
  startTime bigint
  endTime bigint
}

Table Ticket {
  id id
  tokenId bigint
  createTx bytes
  blockNumber bigint
  blockTimestamp bigint
  usageEvents UsageEvent[] [ref: > UsageEvent.ticket]
  event Event
  integrator Integrator
  relayer Relayer
  owner bytes
  basePrice bigdecimal
  reservedFuel bigdecimal
  reservedFuelProtocol bigdecimal
  isScanned boolean
  isCheckedIn boolean
  isInvalidated boolean
  isClaimed boolean
}

Table PriceOracle {
  id id
  price bigdecimal
  lastUpdateTimestamp bigint
  lastUpdateTx bytes
  lastCustodialSwapPrice bigdecimal
}

Table SpentFuelRecipient {
  id id
  collectedSpentFuel bigdecimal
  label string
  percentage bigdecimal
  isEnabled boolean
  spentFuelCollectedEvents SpentFuelCollectedEvent[] [ref: > SpentFuelCollectedEvent.recipient]
}

Table TopUpEvent {
  id id
  txHash bytes
  invoiceNumber bigint
  blockNumber bigint
  blockTimestamp bigint
  day int
  integrator Integrator
  integratorIndex string
  type TopUpEventType
  total bigdecimal
  totalUsd bigdecimal
  salesTaxRate bigdecimal
  saledTax bigdecimal
  price bigdecimal
  externalId bytes
}

Table UsageEvent {
  id id
  txHash bytes
  blockNumber bigint
  blockTimestamp bigint
  day int
  integrator Integrator
  integratorIndex string
  relayer Relayer
  relayerAddress bytes
  orderTime bigint
  price bigdecimal
  type UsageEventType
  getUsed bigdecimal
  getUsedProtocol bigdecimal
  nftId string
  event Event
  eventIndex bigint
  eventAddress bytes
  ticket Ticket
  tokenId bigint
  latitude bigdecimal
  longitude bigdecimal
}

Table SpentFuelCollectedEvent {
  id id
  txHash bytes
  blockNumber bigint
  blockTimestamp bigint
  day int
  recipient SpentFuelRecipient
  recipientAddress bytes
  recipientLabel string
  recipientPercentage bigdecimal
  amount bigdecimal
  totalAmountCollected bigdecimal
}